<resources>
    <string name="app_name">BRI Branch Performance Report</string>
    <string name="question_kode_uker">1. Kode Uker (4 digit)</string>
    <string name="question_nama_uker">2. Nama Uker</string>
    <string name="question_pn_pekerja">3. Personal Number</string>
    <string name="question_nama_pekerja">4.Nama</string>
    <string name="question_pekerjaan">5. Jabatan</string>
    <string name="question_brinets">6. Berapa lama waktunya loading BRINETS WEB? (dalam satuan detik)</string>
    <string name="question_brinets_load">7. Menu yang dijalankan untuk mengukur waktu loading BRINETS</string>
    <string name="question_las">8. Berapa lama waktunya loading LAS? (dalam satuan detik)</string>
    <string name="question_las_load">9. Menu yang dijalankan untuk mengukur waktu loading LAS</string>
    <string name="question_sso">10. Berapa lama waktunya loading PORTAL SSO? (dalam satuan detik)</string>
    <string name="question_sso_load">11. Menu yang dijalankan untuk mengukur waktu loading PORTAL SSO</string>
    <string name="question_timeout">12. Jika unit kerja Anda mengalami TIME-OUT pada hari ini, sebutkan jam berapa sampai jam berapa? Kosongkan jika tidak mengalami TIME-OUT</string>
    <string name="question_offline">13. Jika unit kerja Anda mengalami OFFLINE pada hari ini, sebutkan jam berapa sampai jam berapa? Kosongkan jika tidak mengalami OFFLINE</string>
    <string name="question_jarkom">14. Apakah nama provider jaringan komunikasi Anda</string>
    <string name="question_appkendala">15. Apakah ada aplikasi lainnya yang mengalami kendala</string>
    <string name="question_kendalanya">16. Jika ya, sebutkan nama aplikasi dan kendalanya</string>
    <string name="text_jawaban">Jawaban : </string>
    <string name="btn_next">Selanjutnya</string>
    <string name="btn_simpan">Simpan</string>
    <string name="text_question_simpan">Yakin ingin menyimpan ?</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="failed_get_response_msg">Gagal mendapatkan response</string>
    <string name="text_btn_next">Selanjutnya</string>
    <string name="msg_back_btn_exit">Tekan tombol back sekali lagi untuk keluar</string>
    <string name="msg_onfailure_callback">Gagal memperoses response message</string>
    <string name="msg_no_internet">Tidak ada koneksi internet</string>
    <string name="msg_data_notfound">Data tidak ditemukan</string>
    <string name="hint_branch_code">4 Digit Kode Uker</string>
    <string name="hint_branch_name">Nama Unit Kerja</string>
    <string name="hint_personal_number">Personal Number</string>
    <string name="hint_emp_name">Nama Pekerja</string>
    <string name="txt_subtitle_emp_data">Data Pekerja</string>
    <string name="hint_emp_job">Jabatan</string>
    <string name="err_msg_branch_code">Masukan nama lengkap</string>
    <string name="err_msg_branch_name">Masukan nama uker</string>
    <string name="err_msg_personal_number">Masukan personal number</string>
    <string name="err_msg_emp_name">Masukan nama anda</string>
    <string name="err_msg_emp_job">Masukan jabatan anda</string>
    <string name="title_activity_data_questionaire">DataQuestionaireActivity</string>
    <string name="txt_subtitle_questions_app">Survey Aplikasi</string>
    <string name="hint_brinet_time">Waktu loading Brinets Web (detik)</string>
    <string name="hint_brinet_menu">Menu Brinet yang di Tes</string>
    <string name="hint_las_time">Waktu loading LAS (detik)</string>
    <string name="hint_las_menu">Menu LAS yang di Tes</string>
    <string name="hint_sso_time">Waktu loading SSO (detik)</string>
    <string name="hint_sso_menu">Menu Portal SSO yang di Tes</string>
    <string name="hint_other_menu">Aplikasi lain yang mengalami gangguan</string>
    <string name="hint_other_time">Waktu Loading aplikasi lain yang gangguan (detik)</string>
    <string name="hint_timeout">Berapa sering/lama TIMEOUT Jaringan Unit Kerja</string>
    <string name="hint_offline">Berapa sering/lama OFFLINE Unit Kerja</string>
    <string name="network_mpls_icon">MPLS-ICON +</string>
    <string name="network_mpls_telkom">MPLS-Telkom</string>
    <string name="network_vsat_brisat">VSAT-BRISAT</string>
    <string name="network_vsat_csm">VSAT-CSM</string>
    <string name="network_vsat_icon">VSAT-ICON +</string>
    <string name="network_vsat_lintas_arta">VSAT-Lintas Arta</string>
    <string name="network_vsat_metrasat">VSAT-Metrasat</string>
    <string name="network_vsat_patrakom">VSAT-Patrakom</string>
    <string name="network_vsat_satkomindo">VSAT-Satkomindo</string>
    <string name="network_mikrotik">Modem + Mikrotik</string>
    <string name="text_network_device">Perangkat jaringan Unit Kerja</string>
    <string name="txt_subtitle_questions_net">Survey Jaringan</string>
    <string name="err_msg_network_timeout">Keluhan network timeout tidak boleh kosong</string>
    <string name="err_msg_network_offline">Keluhan network offline tidak boleh kosong</string>
    <string name="txt_title_loading">Loading..</string>
    <string name="txt_dialog_save">Proses menyimpan..</string>
    <string name="err_msg_brinet_time">Masukan waktu loading brinet</string>
    <string name="err_msg_brinet_menu">Masukan menu brinet yang dilakukan untuk tes</string>
    <string name="err_msg_las_menu">Masukan menu LAS yang dilakukan untuk tes</string>
    <string name="err_msg_sso_menu">Masukan menu SSO yang dilakukan untuk tes</string>
    <string name="err_msg_other_menu">Masukan menu aplikasi lain yang dilakukan untuk tes</string>
    <string name="err_msg_las_time">Masukan waktu loading LAS</string>
    <string name="err_msg_sso_time">Masukan waktu loading SSO</string>
    <string name="err_msg_other_time">Masukan waktu loading aplikasi di atas</string>
    <string name="title_fragment_detail_emp">Pekerja</string>
    <string name="title_fragment_detail_question">Aplikasi</string>
    <string name="title_fragment_detail_network">Jaringan</string>
    <string name="toolbar_detail_title">Report Survey</string>
    <string name="swipe_to_refresh">Swipe down to refresh</string>
    <string name="DB_NAME">bpr.db</string>
    <string name="hint_question_use_existing_data">Anda ingin menggunakan data di atas?</string>
    <string name="text_copyright">Created by rbzeta (robyn.seta@gmail.com)</string>
    <string name="title_fragment_home_hist">20 Latest Entry</string>
    <string name="title_fragment_home_summary">Summary</string>
    <string name="err_msg_cannot_save">Gagal menyimpan data</string>
</resources>
