<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_employee_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp.rbzeta.branchperformancereport.activity.ViewEmployeeData">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/hint_branch_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView22"
                android:layout_weight="1" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textBrancCode"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:text="@string/hint_branch_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView24"
                android:layout_weight="1" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textBranchName"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/hint_personal_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView26"
                android:layout_weight="1" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textPersonalNumber"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/hint_emp_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                android:layout_weight="1" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textEmpName"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/hint_emp_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:layout_weight="1" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16dp"
                android:id="@+id/textEmpJob" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/hint_question_use_existing_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView28"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16dp"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/string_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_no_existing"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:onClick="onClickBtnNo" />

        <Button
            android:text="@string/string_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_next_existing"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true"
            android:onClick="onClickBtnYes" />
    </RelativeLayout>
</RelativeLayout>
